src/assets/css/main.css
/* ... */
[data-theme="dark"] {
    --black: #f8f9fa;
    --black-rgb: 248, 249, 250;
    --white: #111111;
}

::selection {
    background-color: var(--primary-600);
    color: var(--white-fixed);
}

[data-theme="dark"] ::selection {
    background-color: var(--primary-200);
    color: var(--black-fixed);
}

/* Typography */

body {
    display: flex;
    min-height: 100dvh;
    width: 100%;
    font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: var(--text-color);
    background-color: var(--background-color);
    margin: 0;
    padding: 0;
    font-size: 18px;
    transition: background-color 0.3s ease, color 0.3s ease;
}

#__nuxt {
    width: 100%;
    min-height: 100dvh;
    display: flex;
    flex-grow: 1;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

h1 {
    font-size: 2rem;
}

h2 {
    font-size: 1.5rem;
}

p {
    font-size: 1rem;
}

a {
    color: var(--primary);
    text-decoration: none;
}

ul {
    list-style: none;
    padding: 0;
}

/* Utilities */

/* Navigation */

header {
    position: absolute;
    top: 0.75rem;
    right: 0.75rem;
    z-index: 500;
    width: fit-content;
}

.menu {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    width: fit-content;
    color: #fff;
}

.menu > ul {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    gap: 0.75rem;
}

.menu > ul > li {
    position: relative;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.dropdown {
    position: relative;
}

.dropdown-button > i {
    transition: transform 0.3s ease;
    transform: rotate(0deg);
}

.dropdown.active .dropdown-button > i {
    transform: rotate(45deg);
}

.dropdown-content {
    display: flex;
    position: absolute;
    top: calc(100% + 0.5rem);
    left: 50%;
    transform: translateX(-50%) scale(0);
    background-color: transparent;
    border: 1px solid var(--black-500);
    border-radius: 0.5rem;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    z-index: 1000;
    flex-direction: column;
    padding: 0.25rem;
    gap: 0.25rem;
    transition: transform 0.3s ease;
}

.dropdown-content > ul {
    display: flex;
    flex-direction: column;
    padding: 0;
    margin: 0;
    gap: 0.25rem;
}

.dropdown-item {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    color: var(--black-fixed);
    background-color: transparent;
    font-size: 0.875rem;
    cursor: pointer;
    border-radius: 0.25rem;
    transition: background-color 0.3s ease, color 0.3s ease;
}

.dropdown-item:not(:has(a)) {
    padding: 0.25rem;
}

.dropdown-item a {
    display: inline-flex;
    align-items: center;
    justify-content: flex-start;
    gap: 0.5rem;
    padding: 0.25rem;
    width: 100%;
    color: inherit;
    text-decoration: none;
}

.dropdown-item:hover {
    background-color: var(--black-500);
    color: var(--white-fixed);
}

.dropdown.active .dropdown-content {
    transform: translateX(-50%) scale(1);
}

[data-theme="dark"] .dropdown-content {
    background-color: transparent;
    border: 1px solid var(--white-200);
    color: var(--white-fixed);
}

[data-theme="dark"] .dropdown-item {
    color: var(--white-fixed);
}

[data-theme="dark"] .dropdown-item:hover {
    background-color: var(--white-200);
    color: var(--black-fixed);
}

/* Buttons */

.btn {
    --btn-bg: transparent;
    --btn-color: var(--black-fixed);
    --btn-hover-bg: var(--black-500);
    --btn-hover-color: var(--white-fixed);
    --btn-border: 1px solid var(--black-500);
    --btn-hover-border: 1px solid var(--black-500);

    display: inline-flex;
    align-items: center;
    justify-content: center;
    padding: 0.5rem;
    border: var(--btn-border);
    border-radius: 0.5rem;
    background-color: var(--btn-bg);
    color: var(--btn-color);
    font-size: 0.75rem;
    cursor: pointer;
    transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
}

.btn:hover {
    background-color: var(--btn-hover-bg);
    color: var(--btn-hover-color);
    border: var(--btn-hover-border);
}

.btn:active, .btn:focus {
    transform: translateY(1px);
}

.btn:disabled {
    opacity: 0.5;
    cursor: not-allowed;
}

[data-theme="dark"] .btn {
    --btn-bg: transparent;
    --btn-color: var(--white-fixed);
    --btn-hover-bg: var(--white-200);
    --btn-hover-color: var(--black-fixed);
    --btn-border: 1px solid var(--white-200);
    --btn-hover-border: 1px solid var(--white-fixed);
}

[data-theme="dark"] .btn-primary, .btn-primary {
    --btn-bg: transparent;
    --btn-color: var(--primary);
    --btn-hover-bg: var(--primary);
    --btn-hover-color: var(--black-fixed);
    --btn-border: 1px solid var(--primary);
    --btn-hover-border: 1px solid var(--primary);
}

[data-theme="dark"] .btn-light {
    --btn-bg: transparent;
    --btn-color: var(--white-fixed);
    --btn-hover-bg: var(--white-fixed);
    --btn-hover-color: var(--black-fixed);
    --btn-border: 1px solid var(--white-fixed);
    --btn-hover-border: 1px solid var(--white-fixed);
}

.btn-light {
    --btn-bg: transparent;
    --btn-color: var(--black-fixed);
    --btn-hover-bg: var(--black-fixed);
    --btn-hover-color: var(--white-fixed);
    --btn-border: 1px solid var(--black-fixed);
    --btn-hover-border: 1px solid var(--black-fixed);
}

[data-theme="dark"] .btn-secondary, .btn-secondary {
    --btn-bg: transparent;
    --btn-color: var(--secondary);
    --btn-hover-bg: var(--secondary);
    --btn-hover-color: var(--white-fixed);
    --btn-border: 1px solid var(--secondary);
    --btn-hover-border: 1px solid var(--secondary);
}

[data-theme="dark"] .btn-tertiary, .btn-tertiary {
    --btn-bg: transparent;
    --btn-color: var(--tertiary);
    --btn-hover-bg: var(--tertiary);
    --btn-hover-color: var(--white-fixed);
    --btn-border: 1px solid var(--tertiary);
    --btn-hover-border: 1px solid var(--tertiary);
}
/* ... */

